# audio

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: SECURITY.md  SUPPORT.md
.github/workflows/: build.yml
examples/: CMakeLists.txt  basic.c  effects.c  eq.c  keyframes.c  layers.c  music.c  stress.c
include/audio/: audio.h
src/: audio.c
